# ChangeLog for dev-db/derby
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jun 2008; James Le Cuirot <chewi@aura-online.co.uk>
  +derby-10.4.1.3.ebuild:
  Version bump and MAJOR cleanup. JDK/JRE versions handled much more
  accurately thanks to java5 USE flag and depend-java-query. No more patches
  required. Tests pass. JAVA_PKG_STRICT works. source USE flag added. Not sure
  what that geronimo-specs stuff was all about but the tests pass without it.
  Adding support for docs will require a new package - I ran out of steam!

  23 Dec 2007; <alistair@gentoo.org> derby-10.2.2.0.ebuild:
  Keyworded ~amd64

  21 Jun 2007; Vlastimil Babka <caster@gentoo.org> derby-10.2.2.0.ebuild:
  Add jdbc4 USE flag to build also jdbc4 client classes in addition to jdbc3,
  currently limited to sun-jdk-1.6. Tested building with ibm and jrockit,
  seems fine. Added src_test which yet fails to compile tests.

  10 Jun 2007; Vlastimil Babka <caster@gentoo.org>
  apache-derby-10.2.2.0.ebuild, +files/build.patch,
  +files/jdbc2-abstract.patch, +files/jdbc2-pull.patch, +files/vti.patch:
  Make the thing somewhat compile, at least with Sun JDK's 1.4 or 1.5, by
  making all jdbc2 stuff abstract via patch. Need to check/fix with other
  JDK's and try some src_test because god knows if this works.

  15 Feb 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Not finnished yet as i don't suceed in buildint it !
