@@ -5,6 +5,6 @@ AUX vti.patch 3302 RMD160 343a25ebe96119438243ff1c900cb14a2b6b9538 SHA1 e2b69a06
 DIST db-derby-10.2.2.0-src.tar.gz 12104081 RMD160 2dc011cf1fa3e6eab37e3ff4ff6cf11de059e53d SHA1 fbbbb58439a0a8e79f595ea3514639f98bbce771 SHA256 0649cdd7f9ca2ea18816e83b11c45a8bb24264b092573644d7aace49c2197399
 DIST db-derby-10.4.1.3-src.tar.gz 23657860 RMD160 6c4ccd46f14f64c39ecbf5a21966a17a13180602 SHA1 f1dcbe12d1130f3136446bd000d206267968cf9f SHA256 57905a33a6fc619684a4790b4b38da7b61362e21ad10f720f3dab774b3b8a8c4
 EBUILD derby-10.2.2.0.ebuild 3341 RMD160 396f856924d6505cd512a165d6995079dc9107e4 SHA1 4ff386c449c3cfec6e5ef336c68d8d4715ee01bf SHA256 65c730104a69bc0d500dc9b335c71f503aefc012c0ec8ba66e5237b7271cc4fd
-EBUILD derby-10.4.1.3.ebuild 2589 RMD160 297008d5f6c7e76cff046df8d9b5a3b4bdd71ad3 SHA1 c5e06ae8f312056420e0187789490a49602fde52 SHA256 d9d46d531636609e9c5da66852936f3d2ad45fd86c16e4aec40cfe3460c81d66
-MISC ChangeLog 1447 RMD160 dd028db25dae4d905a265ab474074f36ea405359 SHA1 4acd2de00bfc16bd5c7d204e10835cdc40242fa3 SHA256 ab35ff144b762f3a0afb61f638fe57ae9798dd046d7ff00a5e75f011edca59dc
+EBUILD derby-10.4.1.3.ebuild 2837 RMD160 74fd1d4f566a3e218ece513268df92895c9b9463 SHA1 83cb94a8efa798c86b11e4103f92d949169dc0ee SHA256 14e0b5c1028401a48a955635c3e11e84b588f28d6c9aeed3818ea72190a7c5eb
+MISC ChangeLog 1676 RMD160 09e75064cc82d527a667372628b3fc9bb5271bf7 SHA1 0889250f240e3dd6ee283d9f5e36a1f8a5d6e5f6 SHA256 e1fe42058d852e370bf875404be2c2ff1c1f004ef2839d7d014a89f9282d017f
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
